# crrf-det

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile
deploy/: build.sh  docker-compose.yml  dockerfile_be  dockerfile_fe
docmt/: CMakeLists.txt  build-debug.sh  build-release.sh
docmt/src/: cmd_page.cc  cmd_preview.cc  cmd_preview.h  cmd_render.cc  cmd_render.h  cmd_section.cc  cpage_renderer.cc  cpage_renderer.h  csplash_output_dev.h  document.cc  document.h  image_info_dev.cc  main.cc  poppler-document-private.h  text_output_dev.cc
pdfs/: CMakeLists.txt  build-dep.sh
pdfs/src/: cmd_page.h  cmd_render.cc  cmd_render.h  cmd_section.h  cmd_text.cc  cmd_text.h  csplash_output_dev.cc  document.cc  document.h  image_info_dev.h  main.cc  text_output_dev.h
src/: det.py  requirements.txt  s-pdf  t-pdf  test.py
src/data/: file.py  project.py  user.py
src/fe/: index.html  package.json  tailwind.config.cjs
src/fe/src/: app.css  app.jsx  index.css  login.jsx  main.jsx  page_host.jsx  register.jsx  side_nav.jsx
src/fe/src/account/: page.jsx
src/fe/src/document/: filter_deck.jsx  list_view.jsx  page.jsx  preview.jsx  structure.jsx  toolstrip.jsx  upload.jsx  view.jsx
src/fe/src/project/: new.jsx  page.jsx  preview.jsx  review.jsx  steps.jsx
src/fe/src/shared/: auth.js  colors.js  config.js  listpreview.jsx  listview.jsx  styles.js  toolstrip.jsx  user.js  utils.js  widgets.jsx
src/fe/src/tagging/: page.jsx  view.jsx
src/search/: index.js  package.json
src/service/: __init__.py  auth.py  docs.py  files.py  filters.py  projects.py  sign.py  users.py  utils.py
src/task/: file.py  project.py  search.py  shared.py
src/tests/: test_pseg.py
src/tpdf/: aggr.py  docmt.py  helper.py  pseg.py
